fix spacing of all top books

--- a/src/TopBooks/TopBooks.css
+++ b/src/TopBooks/TopBooks.css
@@ -3,6 +3,6 @@
   grid-gap: 9rem;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   justify-items: start;
-  width: 90%;
+  /* width: 90%; */
 }
 
